# openplay

./: Cargo.toml  README.md  clippy.toml
src/: cli.rs  error.rs  lib.rs  main.rs
src/discovery/: mod.rs  parse.rs  query.rs
src/info/: mod.rs
src/pairing/: mod.rs  srp.rs  tlv.rs
src/rtsp/: codec.rs  headers.rs  mod.rs
tests/fixtures/: info.plist
