[package]
name = "openplay"
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
authors = ["Eira <eira@nornity.com>"]
description = "AirPlay 2 audio sender: stream PC audio to HomePod and Apple TV"
license = "Apache-2.0"
repository = "https://github.com/SkuldNorniern/openplay"
keywords = ["airplay", "raop", "audio", "homepod", "streaming"]
categories = ["multimedia::audio", "network-programming"]

[dependencies]
plist = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "io-util", "macros"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
